# game-patches

./: .gitignore  Cargo.toml  README.md
acs-patches/: Cargo.toml  README.md
acs-patches/config/: acs_patches.toml
acs-patches/src/: config.rs  game.rs  lib.rs  patches.rs  platform.rs  sdk.rs  utils.rs
acs-patches/src/framework/: byte_patch.rs
acs-patches/src/patches/: disable_camera_smoothing.rs
acs-patches/src/sdk/: integrity.rs  offsets.rs
acu-patches/: Cargo.toml  README.md
acu-patches/config/: acu_patches.toml
acu-patches/src/: config.rs  game.rs  lib.rs  patches.rs  sdk.rs  utils.rs
acu-patches/src/game/: integrity.rs
acu-patches/src/patches/: disable_camera_smoothing.rs  mouse_sensitivity_fix.rs
acu-patches/src/sdk/: integrity.rs  offsets.rs  structs.rs
acu-patches/src/utils/: platform.rs
config/: mesom_patches.toml
mesom-patches/: Cargo.toml  README.md
mesom-patches/config/: mesom_patches.toml
mesom-patches/src/: config.rs
mesom-patches/src/framework/: byte_patch.rs
mesom-patches/src/patches/: disable_camera_smoothing.rs  uniform_camera_speed.rs
mesom-patches/src/sdk/: offsets.rs
mesom-patches/src/utils/: platform.rs
mesow-patches/: Cargo.toml  README.md
mesow-patches/config/: mesow_patches.toml
mesow-patches/src/: config.rs  lib.rs  sdk.rs  utils.rs
mesow-patches/src/framework/: patch.rs
mesow-patches/src/patches/: disable_camera_smoothing.rs
mesow-patches/src/sdk/: offsets.rs
src/: config.rs  framework.rs  game.rs  lib.rs  patches.rs  sdk.rs  utils.rs
src/framework/: manager.rs  patch.rs
src/game/: integrity.rs
src/patches/: disable_camera_smoothing.rs  mouse_sensitivity_fix.rs  uniform_camera_speed.rs
src/utils/: platform.rs
