[package]
name = "mesow-patches"
version = "0.1.0"
authors = ["lnx00"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
enable-ansi-support = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
libmem = { workspace = true }
windows = { workspace = true }
